modules/data-modeling/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <nameField><displayFormat>OF-{0000}</displayFormat><label>Offer Name</label><startingNumber>1</startingNumber><type>AutoNumber</type></nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>