modules/data-modeling/objects/Offer__c/fields/Contact__c.field-meta.xml
<CustomField><fullName>Contact__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Contact</label><referenceTo>Contact</referenceTo><relationshipLabel>Offers</relationshipLabel><relationshipName>Offers</relationshipName><required>false</required><type>Lookup</type></CustomField>