modules/data-modeling/objects/Offer__c/fields/Property__c.field-meta.xml
<CustomField><fullName>Property__c</fullName><label>Property</label><referenceTo>Property__c</referenceTo><relationshipLabel>Offers</relationshipLabel><relationshipName>Offers</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>