modules/data-modeling/objects/Offer__c/fields/Target_Close_Date__c.field-meta.xml
<CustomField><fullName>Target_Close_Date__c</fullName><label>Target Close Date</label><type>Date</type></CustomField>